Don't generate ion compilation checks in scripts which have already been ion compiled, bug 785755. r=dvander